
AURBUILD
 -v1.8.4 (April 2008)
	* DRASTICALLY improve search times when building official packages

 -v1.8.3 (March 25, 2008)
	* Install deps --asdeps
	* Packages with 'any' arch will install now
	* Rewrote find.py
	* More functions moved around
	* A bunch of code moved around and tweaked
	* Added 'hidden' --url switch mainly for testing without bothering
	  the official aur site.

 -v1.8.2 (March 4, 2008)
	* Fancy new search output
	* Fixed bug that prevented --sync from working properly
	  Package repo database wasn't being found. (moved in pacman 3.1.0)
	* Disabled --vote and --unvote again
	* Moved a bunch of functions out of the main script
 	* Fix bug that makes builddeps fail if the package has been previously
	  built by aurbuild
	* Got rid of annoying pkgname.pid dirs in /var/tmp/aurbuild/build
	  Now it's just /var/tmp/aurbuild/build/pkgname and it gets
	  overwritten if you try to build via aurbuild again. 
	* Remove makepkgv2 support
	* Remove all uses of versionpkg. (makepkg has assimilated its function)
	* --revision removed. It's made obsolete by makepkg
	* Added BUGS file to help keep track of bugs
	* Made more files in /var/tmp/aurbuild owned by aurbuild
	  rather than root

 -v1.8.1 (February 29, 2008)
	* Fixed a lot of stuff in README and the man page
	* Restored --auto-build and --upgrade
	* --upgrade output shows versions and alerts to non-AUR foreign
	  packages.

 -v1.8.0 (February 21, 2008)
	* Updates to make aurbuild compatible with AUR 1.5.0
	* Cleaned up directory structure
	* Tweaked setup script, and some other files (more to come)
	* Added aurbuild's own PKGBUILD to misc/
	* Removed safe flagging notices and checks.
	  (Removed from AUR web interface)
	* Temporarily removed --vote --unvote --upgrade and --auto-build

 -v1.7.8 (March 29, 2007)
	* USE_FAKEROOT fix due to makepkg v3
	* USE_COLOR fix due to makepkg v3
	* lost PKGDEST due to makepkg v3

 -v1.7.7 (March 24, 2007)
	* Fixed lost permissions in AUR tarball.
